--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.7.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "firebase": "^8.2.1",
+    "lodash": "^4.17.20",
+    "swiper": "^6.4.5",
+    "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-lodash": "^2.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,7 +24,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
+    "vue-router": "^3.4.9",
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.6.0"
   },
   "eslintConfig": {
     "root": true,
